# phenomics-explorer

./: .gitignore  Makefile  README.md  agent_evaluator.py  agent_kg_base.py  agent_monarch.py  agents.py  eval.py  eval_result.txt  kg_summary.md  monarch_competency_questions_1.json.graph_table.sep.back  monarch_competency_questions_1.yaml  monarch_utils.py  neo4j_utils.py  pe_notes.md  pyproject.toml  score.py  streamlit_app.py
archive/: kg_summary.md.back  monarch_competency_questions_1.json  monarch_competency_questions_1.json.backup.2
eval/: diagnose.py  score.py
eval/results/: scores.csv
eval/results/diagnoses/PMID_16705067_Patient1sister.json/gpt-4.1-2025-04-14/None/: PMID_16705067_Patient1sister.json
eval/results/diagnoses/PMID_16705067_Patient1sister.json/gpt-4.1-2025-04-14/gpt-4.1-2025-04-14/: PMID_16705067_Patient1sister.json
eval/results/diagnoses/PMID_16705067_Patient1sister.json/gpt-4o-2024-11-20/None/: PMID_16705067_Patient1sister.json
eval/results/diagnoses/PMID_16705067_Patient1sister.json/gpt-4o-2024-11-20/gpt-4.1-2025-04-14/: PMID_16705067_Patient1sister.json
eval/results/diagnoses/PMID_16865293_Family5individual10Y11M.json/gpt-4.1-2025-04-14/None/: PMID_16865293_Family5individual10Y11M.json
eval/results/diagnoses/PMID_16865293_Family5individual10Y11M.json/gpt-4.1-2025-04-14/gpt-4.1-2025-04-14/: PMID_16865293_Family5individual10Y11M.json
eval/results/diagnoses/PMID_16865293_Family5individual10Y11M.json/gpt-4o-2024-11-20/None/: PMID_16865293_Family5individual10Y11M.json
eval/results/diagnoses/PMID_16865293_Family5individual10Y11M.json/gpt-4o-2024-11-20/gpt-4.1-2025-04-14/: PMID_16865293_Family5individual10Y11M.json
eval/results/diagnoses/PMID_18256394_6.json/gpt-4.1-2025-04-14/None/: PMID_18256394_6.json
eval/results/diagnoses/PMID_18256394_6.json/gpt-4.1-2025-04-14/gpt-4.1-2025-04-14/: PMID_18256394_6.json
eval/results/diagnoses/PMID_18256394_6.json/gpt-4o-2024-11-20/None/: PMID_18256394_6.json
eval/results/diagnoses/PMID_18256394_6.json/gpt-4o-2024-11-20/gpt-4.1-2025-04-14/: PMID_18256394_6.json
eval/results/diagnoses/PMID_19776401_Patient8-2.json/gpt-4.1-2025-04-14/None/: PMID_19776401_Patient8-2.json
src/phenomics_explorer/: agent_evaluator.py  agent_kg_base.py  agent_kgbase.py  agent_kgbase_evaluator.py  agent_monarch.py  agent_monarch_evaluator.py  kg_summary.md  monarch_constants.py  monarch_utils.py  neo4j_utils.py  utils.py
(+65 files in other folders)
