[tool.poetry]
name = "phenomics-assistant"
version = "0.1.0"
description = "LLM retrieval augmented generation agent for Monarch."
authors = ["Shawn O'Neil <oneilsh@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python=">=3.12,<4.0"
streamlit = "^1.26.0"
python-dotenv = "^1.0.0"
kani-utils = {git = "https://github.com/oneilsh/kani-utils.git", branch = "main"}
neo4j = "^5.20.0"
st-link-analysis = "^0.3.0"
pyyaml = "^6.0.2"
seaborn = "^0.13.2"
kani = {extras = ["openai"], version = "^1.4.2"}
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
